# hri-physio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
HriPhysioLib/: CMakeLists.txt
HriPhysioLib/include/HriPhysio/: helpers.h
HriPhysioLib/include/HriPhysio/Core/: graph.h  ringBuffer.h  streamerCore.h
HriPhysioLib/include/HriPhysio/Dev/: deviceInterface.h  polarDevice.h  shimmerDevice.h
HriPhysioLib/include/HriPhysio/Factory/: streamerFactory.h
HriPhysioLib/include/HriPhysio/Manager/: physioManager.h  robotManager.h  threadManager.h
HriPhysioLib/include/HriPhysio/Processing/: biquadratic.h  butterworthBandNoch.h  butterworthBandPass.h  butterworthHighPass.h  butterworthLowPass.h  hilbertTransform.h  math.h  spectrogram.h
HriPhysioLib/include/HriPhysio/Social/: robotInterface.h
HriPhysioLib/include/HriPhysio/Stream/: csvStreamer.h  lslStreamer.h  streamerInterface.h
HriPhysioLib/include/HriPhysio/Stream/ros/: rosStreamer.h
HriPhysioLib/include/HriPhysio/Stream/yarp/: yarpStreamer.h
HriPhysioLib/include/PocketFFT/: pocketfft_demo.cc
HriPhysioLib/src/: biquadratic.cpp  butterworthBandNoch.cpp  butterworthBandPass.cpp  butterworthHighPass.cpp  butterworthLowPass.cpp  csvStreamer.cpp  deviceInterface.cpp  graph.cpp  helpers.cpp  hilbertTransform.cpp  lslStreamer.cpp  physioManager.cpp  ringBuffer.cpp  robotInterface.cpp  robotManager.cpp  rosStreamer.cpp  spectrogram.cpp  streamerCore.cpp  streamerFactory.cpp  streamerInterface.cpp  threadManager.cpp  yarpStreamer.cpp
app/: CMakeLists.txt
app/PhysioReceiver/conf/: conf.yaml  conf_ecg.yaml  conf_hr.yaml  conf_lin.yaml
app/PhysioStreamer/conf/: conf_acc.yaml  conf_ppg.yaml
app/QtPhysioCoach/conf/: coach.yaml  stream_acc.yaml  stream_hr.yaml  stream_rr.yaml
cmake/: InstallBasicPackageFiles.cmake
data/: HRV-RR-realtime.ipy  HRV-RR.ipy  ppg_plot.py
data/analysis/: ppg_find_peaks.py  ro-man_figure.ipynb
data/analysis/scripts/: cross_correlation.py
devices/PolarStreamer/: gradle.properties  settings.gradle
devices/PolarStreamer/app/: build.gradle
devices/PolarStreamer/app/src/androidTest/java/com/hri_physio/polarstreamer/: ExampleInstrumentedTest.java
devices/PolarStreamer/app/src/main/: AndroidManifest.xml
devices/PolarStreamer/app/src/main/java/com/hri_physio/polarstreamer/: LSLStream.java  MainActivity.java  PlotterACC.java  PlotterECG.java  PlotterListener.java  PlotterPPG.java  PolarH10Frag.java  PolarOH1Frag.java  TimePlotterHR.java
devices/PolarStreamer/app/src/main/java/com/hri_physio/polarstreamer/ui/main/: PageViewModel.java  PlaceholderFragment.java  SectionsPagerAdapter.java
devices/PolarStreamer/app/src/main/res/layout/: device_id_dialog_layout.xml  h10_setting_dialog_layout.xml  polar_h10_frag.xml  polar_oh1_frag.xml
devices/PolarStreamer/app/src/main/res/values/: strings.xml  styles.xml
devices/PolarStreamer/app/src/test/java/com/hri_physio/polarstreamer/: ExampleUnitTest.java
devices/PolarStreamer/gradle/wrapper/: gradle-wrapper.properties
devices/Shimmer3-to-LSL/: edit_device.ui  edit_device_ui.py  main_page_ui.py  main_window.ui  requirements.txt  shimmer_lsl_device.py
modules/: CMakeLists.txt
modules/audioStreamer/: CMakeLists.txt
modules/audioStreamer/python/: audioPlayer.py  audioStreamer.py
modules/neurokitProcessor/python/: neurokitProcessor.py
modules/neurokitSimulator/python/: neurokitSimulator.py  plot.py  temp.txt
modules/neurokitSimulator/python/conf/: conf_ecg.yaml  conf_eda.yaml  conf_emg.yaml  conf_lin.yaml  conf_ppg.yaml  conf_rsp.yaml
modules/physioReceiver/: CMakeLists.txt
modules/physioReceiver/src/: main.cpp
modules/physioStreamer/: CMakeLists.txt  conf_acc.yaml
modules/physioStreamer/src/: physioStreamer.cpp
modules/qtController/: CMakeLists.txt
modules/qtController/gestures/exercise/: arms_forward.xml  base.xml  lateral.xml  marching.xml  step_up.xml
modules/qtController/include/: qtController.h
modules/qtController/include/qt_services/: gesture_play.h  gesture_playRequest.h  gesture_playResponse.h  setting_setVolume.h  setting_setVolumeRequest.h  setting_setVolumeResponse.h  speech_config.h  speech_configRequest.h  speech_configResponse.h
modules/qtController/src/: main.cpp  qtController.cpp
modules/qtPhysioCoach/: CMakeLists.txt
modules/qtPhysioCoach/include/: qtPhysioCoach.h
modules/qtPhysioCoach/python/: coach.py  qtPhysioCoach.py
modules/qtPhysioCoach/src/: main.cpp  qtPhysioCoach.cpp
modules/videoStreamer/python/: videoStreamer.py
tests/: CMakeLists.txt
tests/libHriPhysio_Core/: CMakeLists.txt  ringBufferTest.cpp  streamerCoreTest.cpp
tests/libHriPhysio_Helpers/: CMakeLists.txt  docTestDefine.cpp  helpersTest.cpp
tests/libHriPhysio_Processing/: CMakeLists.txt  dataHilbertTransform.ipynb  dataSpectrogram.ipynb  docTestDefine.cpp  hilbertTransformTest.cpp  processingHelperFunctions.cpp  spectrogramTest.cpp
