# Copyright: (C) 2021, SIRRL Social and Intelligent Robotics Research Laboratory, University of Waterloo
# Authors: Austin Kothig <austin.kothig@uwaterloo.ca>
# CopyPolicy: Released under the terms of the BSD 3-Clause License.

cmake_minimum_required( VERSION 3.12 )

#add_subdirectory( audioStreamer  )
add_subdirectory( physioReceiver )
add_subdirectory( qtController   )
add_subdirectory( qtPhysioCoach  )
#add_subdirectory( videoStreamer  )

############################################################
