# Copyright: (C) 2020, SIRRL Social and Intelligent Robotics Research Laboratory, University of Waterloo
# Authors: Austin Kothig <austin.kothig@uwaterloo.ca>
# CopyPolicy: Released under the terms of the BSD 3-Clause License.

cmake_minimum_required( VERSION 3.12 )

add_subdirectory( libHriPhysio_Core )
#add_subdirectory( libHriPhysio_Processing )
#add_subdirectory( libHriPhysio_Helpers )
